--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,14 @@
         android:layout_height="wrap_content"
         android:onClick="showLastLocation"/>
 
+    <ToggleButton
+        android:id="@+id/tbt_update_location"
+        android:textOff="@string/start_location_updates"
+        android:textOn="@string/stop_location_updates"
+        android:checked="false"
+        android:layout_marginTop="40sp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
